lkt/bootstrap/src/liblktlang.h

/*
 * Data type for all nodes. Nodes are assembled to make up a tree.  See the
 * node primitives below to inspect such trees.
 *
 * Unlike for contexts and units, this type has weak-reference semantics:
 * keeping a reference to a node has no effect on the decision to keep the unit
 * that it owns allocated. This means that once all references to the context
 * and units related to a node are dropped, the context and its units are
 * deallocated and the node becomes a stale reference: most operations on it
 * will raise a ``Stale_Reference_Error``.
 *
 * Note that since reparsing an analysis unit deallocates all the nodes it
 * contains, this operation makes all reference to these nodes stale as well.
 */
typedef struct lkt_base_node__struct *lkt_base_node;
typedef uint8_t lkt_bool;
        



    typedef struct {
            lkt_internal_metadata md;
            lkt_env_rebindings_type rebindings;
            lkt_bool from_rebound;
    } lkt_internal_entity_info;
        



    typedef struct {
            lkt_base_node node;
            lkt_internal_entity_info info;
    } lkt_node;
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_named_type_decl_f_decls(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_enum_class_decl_f_branches(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_enum_type_decl_f_literals(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_decl_annotation_f_name(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field may be null even when there are no parsing errors.
 */
extern int lkt_decl_annotation_f_args(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_decl_annotation_args_f_args(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field can contain one of the following nodes: ``lkt_any_of``,
 * ``lkt_array_literal``, ``lkt_bin_op``, ``lkt_block_expr``,
 * ``lkt_call_expr``, ``lkt_cast_expr``, ``lkt_dot_expr``,
 * ``lkt_error_on_null``, ``lkt_generic_instantiation``, ``lkt_if_expr``,
 * ``lkt_isa``, ``lkt_keep_expr``, ``lkt_lambda_expr``, ``lkt_lit``,
 * ``lkt_logic_assign``, ``lkt_logic_expr``, ``lkt_logic_predicate``,
 * ``lkt_logic_propagate``, ``lkt_logic_unify``, ``lkt_match_expr``,
 * ``lkt_not_expr``, ``lkt_paren_expr``, ``lkt_raise_expr``, ``lkt_ref_id``,
 * ``lkt_subscript_expr``, ``lkt_try_expr``, ``lkt_un_op``
 *
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_elsif_branch_f_cond_expr(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field can contain one of the following nodes: ``lkt_any_of``,
 * ``lkt_array_literal``, ``lkt_bin_op``, ``lkt_block_expr``,
 * ``lkt_call_expr``, ``lkt_cast_expr``, ``lkt_dot_expr``,
 * ``lkt_error_on_null``, ``lkt_generic_instantiation``, ``lkt_if_expr``,
 * ``lkt_isa``, ``lkt_keep_expr``, ``lkt_lambda_expr``, ``lkt_lit``,
 * ``lkt_logic_assign``, ``lkt_logic_expr``, ``lkt_logic_predicate``,
 * ``lkt_logic_propagate``, ``lkt_logic_unify``, ``lkt_match_expr``,
 * ``lkt_not_expr``, ``lkt_paren_expr``, ``lkt_raise_expr``, ``lkt_ref_id``,
 * ``lkt_subscript_expr``, ``lkt_try_expr``, ``lkt_un_op``
 *
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_elsif_branch_f_then_expr(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_enum_class_case_f_decls(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Return whether this node is present
 */
extern int lkt_excludes_null_p_as_bool(
    lkt_node *node,


    lkt_bool *value_p
);
        



/*
 * Return the type of this expression.
 */
extern int lkt_expr_p_get_type(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Return the expected type of this expression.
 */
extern int lkt_expr_p_get_generic_type(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Return the expected type of this expression.
 */
extern int lkt_expr_p_get_expected_type(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Return the declaration referenced by this expression, if applicable, else
 * null.
 *
 * The property is memoized in order to avoid use the value inside logic
 * variables on every redundent call, causing faulty behavior when used with
 * rebindings. TODO: Do like LAL to avoid memoization for more safety.
 */
extern int lkt_expr_p_referenced_decl(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field can contain one of the following nodes: ``lkt_array_literal``,
 * ``lkt_block_expr``, ``lkt_call_expr``, ``lkt_cast_expr``, ``lkt_dot_expr``,
 * ``lkt_error_on_null``, ``lkt_generic_instantiation``, ``lkt_if_expr``,
 * ``lkt_keep_expr``, ``lkt_lambda_expr``, ``lkt_lit``, ``lkt_logic_expr``,
 * ``lkt_logic_predicate``, ``lkt_match_expr``, ``lkt_paren_expr``,
 * ``lkt_raise_expr``, ``lkt_ref_id``, ``lkt_subscript_expr``, ``lkt_try_expr``
 *
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_any_of_f_expr(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field contains a list that itself contains one of the following nodes:
 * ``lkt_array_literal``, ``lkt_block_expr``, ``lkt_call_expr``,
 * ``lkt_cast_expr``, ``lkt_dot_expr``, ``lkt_error_on_null``,
 * ``lkt_generic_instantiation``, ``lkt_if_expr``, ``lkt_keep_expr``,
 * ``lkt_lambda_expr``, ``lkt_lit``, ``lkt_logic_expr``,
 * ``lkt_logic_predicate``, ``lkt_match_expr``, ``lkt_paren_expr``,
 * ``lkt_raise_expr``, ``lkt_ref_id``, ``lkt_subscript_expr``, ``lkt_try_expr``
 *
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_any_of_f_values(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field contains a list that itself contains one of the following nodes:
 * ``lkt_any_of``, ``lkt_array_literal``, ``lkt_bin_op``, ``lkt_block_expr``,
 * ``lkt_call_expr``, ``lkt_cast_expr``, ``lkt_dot_expr``,
 * ``lkt_error_on_null``, ``lkt_generic_instantiation``, ``lkt_if_expr``,
 * ``lkt_isa``, ``lkt_keep_expr``, ``lkt_lambda_expr``, ``lkt_lit``,
 * ``lkt_logic_assign``, ``lkt_logic_expr``, ``lkt_logic_predicate``,
 * ``lkt_logic_propagate``, ``lkt_logic_unify``, ``lkt_match_expr``,
 * ``lkt_not_expr``, ``lkt_paren_expr``, ``lkt_raise_expr``, ``lkt_ref_id``,
 * ``lkt_subscript_expr``, ``lkt_try_expr``, ``lkt_un_op``
 *
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_array_literal_f_exprs(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field can contain one of the following nodes:
 * ``lkt_function_type_ref``, ``lkt_generic_type_ref``, ``lkt_simple_type_ref``
 *
 * This field may be null even when there are no parsing errors.
 */
extern int lkt_array_literal_f_element_type(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field can contain one of the following nodes: ``lkt_array_literal``,
 * ``lkt_block_expr``, ``lkt_call_expr``, ``lkt_cast_expr``, ``lkt_dot_expr``,
 * ``lkt_error_on_null``, ``lkt_generic_instantiation``, ``lkt_keep_expr``,
 * ``lkt_lit``, ``lkt_logic_expr``, ``lkt_logic_predicate``,
 * ``lkt_match_expr``, ``lkt_paren_expr``, ``lkt_ref_id``,
 * ``lkt_subscript_expr``
 *
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_base_call_expr_f_name(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_base_call_expr_f_args(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field can contain one of the following nodes: ``lkt_any_of``,
 * ``lkt_array_literal``, ``lkt_bin_op``, ``lkt_block_expr``,
 * ``lkt_call_expr``, ``lkt_cast_expr``, ``lkt_dot_expr``,
 * ``lkt_error_on_null``, ``lkt_generic_instantiation``, ``lkt_if_expr``,
 * ``lkt_isa``, ``lkt_keep_expr``, ``lkt_lambda_expr``, ``lkt_lit``,
 * ``lkt_logic_assign``, ``lkt_logic_expr``, ``lkt_logic_predicate``,
 * ``lkt_logic_propagate``, ``lkt_logic_unify``, ``lkt_match_expr``,
 * ``lkt_not_expr``, ``lkt_paren_expr``, ``lkt_raise_expr``, ``lkt_ref_id``,
 * ``lkt_subscript_expr``, ``lkt_try_expr``, ``lkt_un_op``
 *
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_bin_op_f_left(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_bin_op_f_op(
    lkt_node *node,


    lkt_node *value_p
);